--- a/app/views/home.html
+++ b/app/views/home.html
@@ -62,7 +62,7 @@
                     <div class="description">Presentations</div>
                 </div>
                 <div class="map">
-                    <img src="images/home_about_map.png" alt="map" />
+                    <img src="../images/home_about_map.png" alt="map" />
                     <a href="#home" class="btn_be"><span>Belgium</span></a>
                     <a href="http://www.devoxx.com/display/FR13/Accueil" class="btn_fr"><span>France</span></a>
                     <a href="http://www.devoxx.com/display/UK13/Home" class="btn_uk"><span>United Kingdom</span></a>
@@ -84,7 +84,7 @@
         <ul class="newsList clearfix" news>
             <li>
                 <a href="#about">
-                    <img src="images/news/site.png" alt="" />
+                    <img src="../images/news/site.png" alt="" />
                     <div class="date">29 May '13</div>
                     <h4>New site</h4>
                     <p>Hope you like our brand new website?</br>The CFP part has also been redeveloped using AngularJS and is open sourced on GitHub/devoxx.
@@ -93,7 +93,7 @@
             </li>
             <li>
 
-                    <img src="images/news/call4papers.png" alt="Call For Papers" />
+                    <img src="../images/news/call4papers.png" alt="Call For Papers" />
                     <div class="date">29 May '13</div>
                     <h4>Call For Papers Now Open</h4>
                     <p>The CFP for Devoxx Belgium 2013 is now open and closes on July 6th.
@@ -102,7 +102,7 @@
             </li>
             <li>
                 <!--<a href="#">-->
-                    <img src="images/news/borntobe.png" alt="Born To Be" />
+                    <img src="../images/news/borntobe.png" alt="Born To Be" />
                     <div class="date">29 May '13</div>
                     <h4>New Devoxx Theme</h4>
                     <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
@@ -110,7 +110,7 @@
             </li>
             <li>
                 <!--<a href="#">-->
-                    <img src="images/news/registration.png" alt="Devoxx Registrations" />
+                    <img src="../images/news/registration.png" alt="Devoxx Registrations" />
                     <div class="date">29 May '13</div>
                     <h4>Registrations Open Soon</h4>
                     <p>As always we under-estimated the work for our new website including the redevelopment of the CFP proposals module.
@@ -119,7 +119,7 @@
             </li>
             <li>
                 <a href="#team">
-                <img src="images/news/team.png" alt="The Devoxx BE team" />
+                <img src="../images/news/team.png" alt="The Devoxx BE team" />
                 <div class="date">29 May '13</div>
                 <h4>The Devoxx Team</h4>
                 <p>The international Devoxx team has already been working hard behind the scenes.
