--- a/app/views/speaker/proposal_form.html
+++ b/app/views/speaker/proposal_form.html
@@ -8,7 +8,7 @@
                     Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
             </div>
             <div class="col11">
-                <img src="images/topinfo_visual_call.png" class="visual" alt=""/>
+                <img src="../../images/topinfo_visual_call.png" class="visual" alt=""/>
             </div>
         </div>
     </div>
