--- a/app/views/home.html
+++ b/app/views/home.html
@@ -85,7 +85,7 @@
             <li>
                 <a href="#about">
                     <img src="../images/news/site.png" alt="" />
-                    <div class="date">29 May '13</div>
+                    <div class="date">3 June '13</div>
                     <h4>New site</h4>
                     <p>Hope you like our brand new website?</br>The CFP part has also been redeveloped using AngularJS and is open sourced on GitHub/devoxx.
                        Yes we welcome pull requests with any king of improvements!</br>Click here fore more info about our team</p>
@@ -94,16 +94,16 @@
             <li>
 
                     <img src="../images/news/call4papers.png" alt="Call For Papers" />
-                    <div class="date">29 May '13</div>
+                    <div class="date">3 June '13</div>
                     <h4>Call For Papers Now Open</h4>
-                    <p>The CFP for Devoxx Belgium 2013 is now open and closes on July 6th.
-                        </br>Please login and submit your proposals and help us shape another awesome conference.</p>
+                    <p>The CFP for Devoxx Belgium 2013 is now open and closes end of June.
+                    </br>Please login and submit your proposals and help us shape another awesome conference.</p>
 
             </li>
             <li>
                 <!--<a href="#">-->
                     <img src="../images/news/borntobe.png" alt="Born To Be" />
-                    <div class="date">29 May '13</div>
+                <div class="date">3 June '13</div>
                     <h4>New Devoxx Theme</h4>
                     <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
                 <!--</a>-->
@@ -111,7 +111,7 @@
             <li>
                 <!--<a href="#">-->
                     <img src="../images/news/registration.png" alt="Devoxx Registrations" />
-                    <div class="date">29 May '13</div>
+                    <div class="date">3 June '13</div>
                     <h4>Registrations Open Soon</h4>
                     <p>As always we under-estimated the work for our new website including the redevelopment of the CFP proposals module.
                        As a result the Devoxx registrations will open a bit later, our target is end of June.</p>
@@ -120,7 +120,7 @@
             <li>
                 <a href="#team">
                 <img src="../images/news/team.png" alt="The Devoxx BE team" />
-                <div class="date">29 May '13</div>
+                <div class="date">3 June '13</div>
                 <h4>The Devoxx Team</h4>
                 <p>The international Devoxx team has already been working hard behind the scenes.
                    Our batteries are again fully charged to organise a great Devoxx experience for you!
