--- a/app/views/practical/contact.html
+++ b/app/views/practical/contact.html
@@ -4,19 +4,80 @@
         <div class="row">
             <div class="col9">
 
-                <h1>Contact</h1>
-                Lijsterbessendreef 1</br>
-                B-8020 Oostkamp</br>
-                Belgium</br>
-                BE 0477 182 887</br>
-                <b>info@devoxx.com</b>
-            </div>
-            <div class="col11">
-
-                <img src="../../images/topinfo_location_visual.jpg" class="visual" alt="" />
+                <h1>Contact us</h1>
+                <p>Lijsterbessendreef 1<br>
+                    B-8020 Oostkamp<br>
+                    Belgium<br>
+                    BE 0477 182 887<br>
+                    <a href="#">info@devoxx.com</a>
+                </p>
 
             </div>
         </div>
+
+    </div>
+</div>
+
+
+
+<div id="paper_form" class="area lightgrey">
+    <div class="grid">
+
+        <form>
+
+            <div class="row">
+                <div class="col12">
+
+                    <ul>
+                        <li>
+                            <label>Name</label>
+                            <input type="text" class="text" name="" value="" />
+                        </li>
+                        <li>
+                            <label>Firstname</label>
+                            <input type="text" class="text" name="" value="" />
+                        </li>
+                        <li>
+                            <label>Language</label>
+                            <select name="select1" style="width: 85%">
+                                <option class="choose">Choose option</option>
+                                <option value="option1">option 1</option>
+                                <option value="option1">option 1</option>
+                                <option value="option1">option 1</option>
+                                <option value="option1">option 1</option>
+                            </select>
+                        </li>
+                        <li>
+                            <label>Intrest</label>
+                            <ul class="checkradios clearfix">
+                                <li><label><input type='checkbox' value='check1' /> Sponsoring</label></li>
+                                <li><label><input type='checkbox' value='check2' /> Exhibition</label></li>
+                                <li><label><input type='checkbox' value='check2' /> Presentations</label></li>
+                                <li><label><input type='checkbox' value='check2' /> Practical</label></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <label>Question</label>
+                            <textarea name=""></textarea>
+                        </li>
+                        <li class="btn">
+                            <input type="submit" name="" value="Send" />
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="col6 push2 ">
+
+                    <div class="banner">
+                        <h4>IMPORTANT NOTE</h4>
+                        <p>Make sure you first view the <a href="#faq">FAQ page</a> before contacting us.</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </form>
 
     </div>
 </div>
