--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -2,10 +2,60 @@
     <div class="grid">
 
         <div class="row">
-            <div class="col16">
+            <div class="col11">
 
-                <h1>Frequently Asked Questions</h1>
-                <h3>Edition 2013</h3>
+                <h1>FAQ</h1>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.
+                    laoreet rutrum faucibus dolor auctor </p>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+<div id="paper_form" class="area lightgrey">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col12">
+
+                <h1>Frequently asked questions</h1>
+
+                <div id="accordion">
+
+                    <h4 class="acco_title">Title faq 1</h4>
+                    <div class="acco_content" style="display: block;">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                    </div>
+
+                    <h4 class="acco_title">Title faq 2</h4>
+                    <div class="acco_content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                    </div>
+
+                    <h4 class="acco_title">Title faq 3</h4>
+                    <div class="acco_content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                    </div>
+
+                    <h4 class="acco_title">Title faq 4</h4>
+                    <div class="acco_content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col6 push2 ">
+
+                <div class="banner">
+                    <h4>IMPORTANT NOTE</h4>
+                    <p>Please submit a question on our <a href="#contact">Contact Us</a> page if this page couldn't help you!</p>
+                </div>
+
             </div>
         </div>
 
