--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -1,11 +1,12 @@
+
 <div id="topinfo" class="area orange">
     <div class="grid">
 
         <div class="row">
-            <div class="col16">
+            <div class="col9">
 
                 <h1>The Devoxx Team</h1>
-                <h3>Edition 2013</h3>
+                <p></p>
             </div>
         </div>
 
@@ -13,30 +14,173 @@
 </div>
 
 
-<div id="groups" class="area blue">
+
+<div id="filters" class="area blue">
     <div class="grid">
 
         <div class="row">
-            <div class="col1 push1">
+            <div class="col20">
 
-                <h4>Steering</h4>
-            </div>
-            <div class="col1 push1">
+                <ul>
+                    <li>
+                        <a href="#" data-filter="*">All</a>
+                    </li>
+                    <li>
+                        <a href="#" data-filter=".Management">Management</a>
+                    </li>
+                    <li>
+                        <a href="#" data-filter=".Steering">Steering</a>
+                    </li>
+                    <li>
+                        <a href="#" data-filter=".Program">Program</a>
+                    </li>
+                    <li>
+                        <a href="#" data-filter=".Volunteers">Volunteers</a>
+                    </li>
+                </ul>
 
-                <h4>Program</h4>
             </div>
         </div>
 
     </div>
 </div>
 
-
-<div id="members" class="area lightgrey">
+<div id="team" class="area lightgrey">
     <div class="grid">
 
         <div class="row">
+            <div class="col20">
 
+                <ul class="dotList" id="contactList">
+                    <li class="Program">
+                        <div class="icon" style="background: url(images/team/JoVoordeckers.jpg) no-repeat center;"></div>
+                        <h4>Jo Voordeckers</h4>
+                        <div class="popup">
+                            <h4>Jo Voordeckers</h4>
+                            <p>Jo is no newcomer to the Java community, at JavaOne'08 he spoke on how to implement streaming video in the pre-release of JavaFX and also developed the Parleys.com JavaFX demo for the JavaOne'08 keynote. Next to his day job as a Java, web and mobile developer for Parleys.com and Devoxx, he is active in the Devoxx steering committee and the Belgium JUG where he drives the coding dojo sessions. Jo spends most of his free time experimenting with new technologies and enjoys speaking about Swing, JavaFX, Flex, Mercurial/GIT and lately HTML5. Jo has presented at JavaOne, Devoxx and BeJUG, blogs at blog.pursuit.be</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="http://twitter.com/jovoordeckers" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Program">
+                        <div class="icon" style="background: url(images/team/JanKeesVanAndel.jpg) no-repeat center;"></div>
+                        <h4>Jan-Kees Van Andel</h4>
+                        <div class="popup">
+                            <h4>Jan-Kees Van Andel</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Program">
+                        <div class="icon" style="background: url(images/team/GertLeenders.jpg) no-repeat center;"></div>
+                        <h4>Gert Leenders</h4>
+                        <div class="popup">
+                            <h4>Gert Leenders</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Management Steering Program">
+                        <div class="icon" style="background: url(images/team/StephanJanssen.jpg) no-repeat center;"></div>
+                        <h4>Stephan Janssen</h4>
+                        <div class="popup">
+                            <h4>Stephan Janssen</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="http://twitter.com/stephan007" class="btn_twitter">Twitter</a>
+                                <a href="mailto:sja@devoxx.com" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Management">
+                        <div class="icon" style="background: url(images/team/TimPeeters.jpg) no-repeat center;"></div>
+                        <h4>Tim Peeters</h4>
+                        <div class="popup">
+                            <h4>Tim Peeters</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Steering Program">
+                        <div class="icon" style="background: url(images/team/LouisJacomet.jpg) no-repeat center;"></div>
+                        <h4>Louis Jacomet</h4>
+                        <div class="popup">
+                            <h4>Louis Jacomet</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Steering">
+                        <div class="icon" style="background: url(images/team/KristienLeyn.jpg) no-repeat center;"></div>
+                        <h4>Kristien Leyn</h4>
+                        <div class="popup">
+                            <h4>Kristien Leyn</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Management">
+                        <div class="icon" style="background: url(images/team/JohanVos.jpg) no-repeat center;"></div>
+                        <h4>Johan Vos</h4>
+                        <div class="popup">
+                            <h4>Johan Vos</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="Program">
+                        <div class="icon" style="background: url(images/team/AlexVanBoxel.jpg) no-repeat center;"></div>
+                        <h4>Alex Van Boxel</h4>
+                        <div class="popup">
+                            <h4>Alex Van Boxel</h4>
+                            <p>Vivamus sagittis lacus vel augue laoreet</p>
+                            <div class="links clearfix">
+                                <a href="#" class="btn_facebook">Facebook</a>
+                                <a href="#" class="btn_linkedin">LinkedIn</a>
+                                <a href="#" class="btn_twitter">Twitter</a>
+                                <a href="#" class="btn_mail">Mail me</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
         </div>
-
     </div>
 </div>
