--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col11">
 
-                <img src="../../images/topinfo_location_visual.jpg" class="visual" alt="" />
+                <img src="../../images/topinfo_location_visual.png" class="visual" alt="" />
 
             </div>
         </div>
