Corrected speaker image URL

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -3,7 +3,7 @@
     <div class="grid">
 
         <div class="row">
-            <div class="col9">
+            <div class="col12">
 
                 <h1>The Devoxx Team</h1>
                 <p></p>
@@ -12,8 +12,6 @@
 
     </div>
 </div>
-
-
 
 <div id="filters" class="area blue">
     <div class="grid">
@@ -53,7 +51,7 @@
 
                 <ul class="dotList" id="contactList">
                     <li class="Program">
-                        <div class="icon" style="background: url(images/team/JoVoordeckers.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/JoVoordeckers.jpg) no-repeat center;"></div>
                         <h4>Jo Voordeckers</h4>
                         <div class="popup">
                             <h4>Jo Voordeckers</h4>
@@ -67,7 +65,7 @@
                         </div>
                     </li>
                     <li class="Program">
-                        <div class="icon" style="background: url(images/team/JanKeesVanAndel.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/JanKeesVanAndel.jpg) no-repeat center;"></div>
                         <h4>Jan-Kees Van Andel</h4>
                         <div class="popup">
                             <h4>Jan-Kees Van Andel</h4>
@@ -81,7 +79,7 @@
                         </div>
                     </li>
                     <li class="Program">
-                        <div class="icon" style="background: url(images/team/GertLeenders.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/GertLeenders.jpg) no-repeat center;"></div>
                         <h4>Gert Leenders</h4>
                         <div class="popup">
                             <h4>Gert Leenders</h4>
@@ -95,7 +93,7 @@
                         </div>
                     </li>
                     <li class="Management Steering Program">
-                        <div class="icon" style="background: url(images/team/StephanJanssen.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/StephanJanssen.jpg) no-repeat center;"></div>
                         <h4>Stephan Janssen</h4>
                         <div class="popup">
                             <h4>Stephan Janssen</h4>
@@ -109,7 +107,7 @@
                         </div>
                     </li>
                     <li class="Management">
-                        <div class="icon" style="background: url(images/team/TimPeeters.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/TimPeeters.jpg) no-repeat center;"></div>
                         <h4>Tim Peeters</h4>
                         <div class="popup">
                             <h4>Tim Peeters</h4>
@@ -123,7 +121,7 @@
                         </div>
                     </li>
                     <li class="Steering Program">
-                        <div class="icon" style="background: url(images/team/LouisJacomet.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/LouisJacomet.jpg) no-repeat center;"></div>
                         <h4>Louis Jacomet</h4>
                         <div class="popup">
                             <h4>Louis Jacomet</h4>
@@ -137,7 +135,7 @@
                         </div>
                     </li>
                     <li class="Steering">
-                        <div class="icon" style="background: url(images/team/KristienLeyn.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/KristienLeyn.jpg) no-repeat center;"></div>
                         <h4>Kristien Leyn</h4>
                         <div class="popup">
                             <h4>Kristien Leyn</h4>
@@ -151,7 +149,7 @@
                         </div>
                     </li>
                     <li class="Management">
-                        <div class="icon" style="background: url(images/team/JohanVos.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/JohanVos.jpg) no-repeat center;"></div>
                         <h4>Johan Vos</h4>
                         <div class="popup">
                             <h4>Johan Vos</h4>
@@ -165,7 +163,7 @@
                         </div>
                     </li>
                     <li class="Program">
-                        <div class="icon" style="background: url(images/team/AlexVanBoxel.jpg) no-repeat center;"></div>
+                        <div class="icon" style="background: url(../../images/team/AlexVanBoxel.jpg) no-repeat center;"></div>
                         <h4>Alex Van Boxel</h4>
                         <div class="popup">
                             <h4>Alex Van Boxel</h4>
