Added the other Devoxx crew members

--- a/app/views/practical/contact.html
+++ b/app/views/practical/contact.html
@@ -18,8 +18,6 @@
     </div>
 </div>
 
-
-
 <div id="paper_form" class="area lightgrey">
     <div class="grid">
 
@@ -31,37 +29,27 @@
                     <ul>
                         <li>
                             <label>Name</label>
-                            <input type="text" class="text" name="" value="" />
+                            <input type="text" class="text" name="name" value="" />
                         </li>
                         <li>
-                            <label>Firstname</label>
-                            <input type="text" class="text" name="" value="" />
+                            <label>Company</label>
+                            <input type="text" class="text" name="company" value="" />
                         </li>
                         <li>
-                            <label>Language</label>
-                            <select name="select1" style="width: 85%">
-                                <option class="choose">Choose option</option>
-                                <option value="option1">option 1</option>
-                                <option value="option1">option 1</option>
-                                <option value="option1">option 1</option>
-                                <option value="option1">option 1</option>
-                            </select>
-                        </li>
-                        <li>
-                            <label>Intrest</label>
+                            <label>Category</label>
                             <ul class="checkradios clearfix">
-                                <li><label><input type='checkbox' value='check1' /> Sponsoring</label></li>
-                                <li><label><input type='checkbox' value='check2' /> Exhibition</label></li>
-                                <li><label><input type='checkbox' value='check2' /> Presentations</label></li>
-                                <li><label><input type='checkbox' value='check2' /> Practical</label></li>
+                                <li><label><input type='checkbox' value='sponsoring' /> Sponsoring</label></li>
+                                <li><label><input type='checkbox' value='exhibition' /> Exhibition</label></li>
+                                <li><label><input type='checkbox' value='presentations' /> Presentations</label></li>
+                                <li><label><input type='checkbox' value='practical' /> Practical</label></li>
                             </ul>
                         </li>
                         <li>
                             <label>Question</label>
-                            <textarea name=""></textarea>
+                            <textarea cols="80" rows="10" name="question"></textarea>
                         </li>
                         <li class="btn">
-                            <input type="submit" name="" value="Send" />
+                            <input type="submit" name="submit" value="Send" />
                         </li>
                     </ul>
 
